--- a/.htaccess
+++ b/.htaccess
@@ -5,6 +5,12 @@
     Header set Expires 0
 </IfModule>
 
+<IfModule mod_rewrite.c>
+RewriteEngine On
+RewriteCond %{HTTPS} on
+RewriteRule ^ http://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+</IfModule>
+
 <FilesMatch "\.(css|flv|gif|htm|html|ico|jpe|jpeg|jpg|js|mp3|mp4|png|pdf|swf|txt)$">
     <IfModule mod_expires.c>
         ExpiresActive Off
